# plusrans

./: README.MD  pyproject.toml  runner.py
autotrans/: autotrans.pro  databaseservice.cpp  databaseservice.h  dbcredentials.cpp  dbcredentials.h  dbmodels.h  loginscreen.cpp  loginscreen.h  loginscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: __init__.py  app.py  app_config.py
src/entities/: base_index.py  base_service.py  exceptions.py  tools.py
src/entities/sources/: routes.py  service.py
src/entities/strahovki/: forms.py  routes.py  schemas.py  service.py  template_views.py
src/entities/tehosmotri/: forms.py  routes.py  schemas.py  service.py  template_views.py
src/entities/voditeli/: forms.py  routes.py  schemas.py  service.py  template_views.py
src/templates/: base.html  strahovki.html  strahovki_add_form.html  tehosmotri.html  tehosmotri_add_form.html  voditeli_add_form.html  voditely.html
views/: readme.txt
